docs-archive/apache-airflow-providers-google/10.1.1/_sources/_api/airflow/providers/google/cloud/transfers/index.rst.txt
:py:mod:`airflow.providers.google.cloud.transfers`
==================================================

.. py:module:: airflow.providers.google.cloud.transfers


Submodules
----------
.. toctree::
   :titlesonly:
   :maxdepth: 1

   adls_to_gcs/index.rst
   azure_fileshare_to_gcs/index.rst
   bigquery_to_bigquery/index.rst
   bigquery_to_gcs/index.rst
   bigquery_to_mssql/index.rst
   bigquery_to_mysql/index.rst
   bigquery_to_postgres/index.rst
   bigquery_to_sql/index.rst
   calendar_to_gcs/index.rst
   cassandra_to_gcs/index.rst
   facebook_ads_to_gcs/index.rst
   gcs_to_bigquery/index.rst
   gcs_to_gcs/index.rst
   gcs_to_local/index.rst
   gcs_to_sftp/index.rst
   gdrive_to_gcs/index.rst
   gdrive_to_local/index.rst
   local_to_gcs/index.rst
   mssql_to_gcs/index.rst
   mysql_to_gcs/index.rst
   oracle_to_gcs/index.rst
   postgres_to_gcs/index.rst
   presto_to_gcs/index.rst
   s3_to_gcs/index.rst
   salesforce_to_gcs/index.rst
   sftp_to_gcs/index.rst
   sheets_to_gcs/index.rst
   sql_to_gcs/index.rst
   trino_to_gcs/index.rst


